Closes (#43)    禁止非ROOT账户在 /status 页面在没有提供用户ID的情况下进行翻页

--- a/application/home/view/themes/bootstrap/status.html
+++ b/application/home/view/themes/bootstrap/status.html
@@ -98,7 +98,9 @@
 		{/volist}
 		</tbody>
 	</table>
+	{if $username != '' || ($login_user && $login_user->is_root)}
 	{$solutions->render()}
+	{/if}
 </div>
 
 {include file="common@snippets/highlight"}
