--- a/application/contest/view/contest-enroll.html
+++ b/application/contest/view/contest-enroll.html
@@ -13,9 +13,9 @@
         <div class="panel-heading">比赛声明</div>
         <div class="panel-body">
             <p>
-                请所有参赛选手报名之前务必认真、仔细阅读《江西理工大学第八届C语言程序设计竞赛参赛规程》，在您提交报名信息后即被默认为您已阅读、理解并同意遵守《江西理工大学第八届C语言程序设计竞赛参赛规程》的一切内容并签署及提交参赛声明。</p>
+                请所有参赛选手报名之前务必认真、仔细阅读《江西理工大学C语言程序设计竞赛参赛规程》，在您提交报名信息后即被默认为您已阅读、理解并同意遵守《江西理工大学C语言程序设计竞赛参赛规程》的一切内容并签署及提交参赛声明。</p>
             <p>作为参赛选手，我本人做出以下声明：</p>
-            <p>1、谨此声明本人自愿参加江西理工大学第八届C语言程序设计竞赛及一切相关活动；</p>
+            <p>1、谨此声明本人自愿参加江西理工大学C语言程序设计竞赛及一切相关活动；</p>
             <p>2、本人全面理解并同意遵守组委会及协助部门所制定的各项规定及采取的措施；</p>
             <p>3、本人身心健康，适合参加此赛事，已为参赛做好充分准备；</p>
             <p>4、本人全面理解参加比赛可能出现的风险，且已准备必要的防范措施；</p>
