网页链接取消下划线 #51
Closes #51

--- a/application/home/view/themes/bootstrap/layout/common.html
+++ b/application/home/view/themes/bootstrap/layout/common.html
@@ -12,22 +12,7 @@
     {include file="common@snippets/bootstrap"}
     {include file="common@snippets/layer"}
 
-    <style>
-        .navbar {
-            border-radius: 0px;
-        }
-
-        pre {
-            border-radius: 0px;
-        }
-
-        /*.btn {*/
-        /*border-radius: 0px;*/
-        /*}*/
-    </style>
-
-    {include file="common@snippets/solution_result"}
-
+    <link rel="stylesheet" href="/static/app.css">
 </head>
 <body>
 {if $login_user && $login_user->need_complete_info_flag}
