增加判题机客户端信息监控功能 #58

--- a/application/admin/view/index/index.html
+++ b/application/admin/view/index/index.html
@@ -106,6 +106,12 @@
                             <cite>上传文件</cite>
                         </a>
                     </li>
+                    <li>
+                        <a _href="/admin/judge_client">
+                            <i class="iconfont">&#xe74e;</i>
+                            <cite>客户端监控</cite>
+                        </a>
+                    </li>
                 </ul>
             </li>
 
