feat: 首页近期比赛增加比赛状态以及用户报名状态 #62

--- a/application/contest/view/contest-problem-recent-solutions-part.html
+++ b/application/contest/view/contest-problem-recent-solutions-part.html
@@ -32,7 +32,7 @@
     {/if}
     {else}
     <div class="panel-body">
-        <p>尚未登录</p>
+        <p><?php echo ['en' => 'Not Logged', 'cn' => '尚未登录'][$show_ui_lang];?></p>
     </div>
     {/if}
 </div>
