--- a/application/home/view/themes/bootstrap/layout/common.html
+++ b/application/home/view/themes/bootstrap/layout/common.html
@@ -100,7 +100,7 @@
     <!--	|-->
     <!--	<a href="https://wiki.ismdeep.com/index.php?title=%E6%B1%9F%E8%A5%BF%E7%90%86%E5%B7%A5%E5%A4%A7%E5%AD%A6ACM-ICPC" target="_blank">JxustACM</a>-->
     |
-    <a href="https://justoj.readthedocs.io" target="_blank">Docs</a>
+    <a href="https://www.notion.so/JustOJ-673f15f8e3e94aebab2b43bfdb41ce6c" target="_blank">Docs</a>
     |
     <a href="https://t.me/justoj_group">Telegram Group</a>
     |
