feat: 服务器状态页面 #64

--- a/application/home/view/themes/bootstrap/layout/common.html
+++ b/application/home/view/themes/bootstrap/layout/common.html
@@ -102,6 +102,8 @@
     |
     <a href="https://www.notion.so/JustOJ-673f15f8e3e94aebab2b43bfdb41ce6c" target="_blank">Docs</a>
     |
+    <a href="/system-info" target="_blank">System Info</a>
+    |
     <a href="https://t.me/justoj_group">Telegram Group</a>
     |
     <a href="https://t.me/justoj_official">Telegram Channel</a>
