服务器状态页面 #64
完善页面布局

--- a/application/home/view/themes/bootstrap/system-info.html
+++ b/application/home/view/themes/bootstrap/system-info.html
@@ -10,9 +10,15 @@
 {block name="body"}
 <br>
 <div class="container">
-    <div id="project-hash-part"></div>
-    <div id="data-hash-part"></div>
-    <div id="pending-cnt-part"></div>
+    <div class="row">
+        <div class="col-sm-6">
+            <div id="project-hash-part"></div>
+            <div id="data-hash-part"></div>
+        </div>
+        <div class="col-sm-6">
+            <div id="pending-cnt-part"></div>
+        </div>
+    </div>
 </div>
 
 <script type="text/javascript">
