--- a/application/home/view/themes/bootstrap/system-info-project-hash-part.html
+++ b/application/home/view/themes/bootstrap/system-info-project-hash-part.html
@@ -1,6 +1,8 @@
 <div class="panel panel-default">
     <div class="panel-heading">Git Hash</div>
     <div class="panel-body">
-        <p>{$source_code_hash}</p>
+        <p>Branch: {$branch_name}</p>
+        <p>Release Date: {$release_date}</p>
+        <p>Commit: {$source_code_hash}</p>
     </div>
 </div>
