--- a/application/home/view/themes/bootstrap/system-info.html
+++ b/application/home/view/themes/bootstrap/system-info.html
@@ -11,12 +11,14 @@
 <br>
 <div class="container">
     <div class="row">
-        <div class="col-sm-6">
+        <div class="col-sm-4">
             <div id="project-hash-part"></div>
             <div id="data-hash-part"></div>
         </div>
-        <div class="col-sm-6">
+        <div class="col-sm-4">
             <div id="pending-cnt-part"></div>
+        </div>
+        <div class="col-sm-4">
         </div>
     </div>
 </div>
