--- a/application/home/view/themes/bootstrap/system-info-data-hash-part.html
+++ b/application/home/view/themes/bootstrap/system-info-data-hash-part.html
@@ -3,7 +3,7 @@
     <div class="panel-body">
         <p>Branch: {$branch_name}</p>
         <p>Release Date: {$release_date}</p>
-        <p>Server HASH: {$local_hash}</p>
+        <p>Commit: {$local_hash}</p>
         {if $local_changed}
         <p>
             <span style="color: red">Local Data Changed! Waiting for Upload.</span>
