--- a/application/home/view/themes/bootstrap/system-info.html
+++ b/application/home/view/themes/bootstrap/system-info.html
@@ -8,18 +8,18 @@
 {/block}
 
 {block name="body"}
+{include file="common@snippets/echart"}
 <br>
-<div class="container">
-    <div class="row">
-        <div class="col-sm-4">
-            <div id="project-hash-part"></div>
-            <div id="data-hash-part"></div>
-        </div>
-        <div class="col-sm-4">
-            <div id="pending-cnt-part"></div>
-        </div>
-        <div class="col-sm-4">
-        </div>
+<div>
+    <div class="col-sm-4">
+        <div id="project-hash-part"></div>
+        <div id="data-hash-part"></div>
+    </div>
+    <div class="col-sm-4">
+        <div id="pending-cnt-part"></div>
+    </div>
+    <div class="col-sm-4">
+        <div id="solution-statistics-part"></div>
     </div>
 </div>
 
@@ -33,12 +33,14 @@
 
     $(function () {
         load_all();
+
+        $('#solution-statistics-part').load('/system-info/solution-statistics-part');
+
         setInterval(function () {
             load_all();
         }, 1000);
     });
 </script>
 
+
 {/block}
-
-
