--- a/application/home/view/themes/bootstrap/system-info.html
+++ b/application/home/view/themes/bootstrap/system-info.html
@@ -10,7 +10,7 @@
 {block name="body"}
 {include file="common@snippets/echart"}
 <br>
-<div>
+<div class="container">
     <div class="col-sm-4">
         <div id="project-hash-part"></div>
         <div id="data-hash-part"></div>
