--- a/application/home/view/themes/bootstrap/status.html
+++ b/application/home/view/themes/bootstrap/status.html
@@ -83,7 +83,7 @@
 			<td width="10%" class="{$solution->result_code}">{$solution->result_text}
 			</td>
 			{/if}
-			<td width="10%">{$solution->memory} B</td>
+			<td width="10%">{$solution->get_memory_h()}</td>
 			<td width="10%">{$solution->time} ms</td>
 			<td width="10%">
 				{if ($login_user && $login_user->is_admin) || ($login_user && $solution->user_id == $login_user->user_id)}
