--- a/application/home/view/themes/bootstrap/problem.html
+++ b/application/home/view/themes/bootstrap/problem.html
@@ -25,11 +25,17 @@
                         <span class=green>{$lang.memory_limit}: </span>{$problem->memory_limit} MB &nbsp;&nbsp;&nbsp;&nbsp;
                         <span class=green>{$lang.accepted}: </span><a
                             href="/status?problem_id={$problem->problem_id}&result=4"
-                            target="_blank">{$problem->accepted}</a> &nbsp;&nbsp;&nbsp;&nbsp;
-                        <span class=green>{$lang.submit}: </span><a href="/status?problem_id={$problem->problem_id}"
+                            target="_blank">{$problem->accepted}</a> / <a href="/status?problem_id={$problem->problem_id}"
                                                                     target="_blank">{$problem->submit}</a> &nbsp;&nbsp;&nbsp;&nbsp;
                         {if $login_user}
-                        <a href="/status?username={$login_user->user_id}&problem_id={$problem->problem_id}" target="_blank">{$lang.my}</a>
+                        <span class=green>{$lang.my}: </span>
+                        <a
+                                href="/status?username={$login_user->user_id}&problem_id={$problem->problem_id}&result=4"
+                                target="_blank">{$login_user_ac_cnt}</a>
+                        /
+                        <a
+                                href="/status?username={$login_user->user_id}&problem_id={$problem->problem_id}"
+                                target="_blank">{$login_user_submit_cnt}</a>
                         {/if}
                     </div>
                 </div>
