fix: fix system-info-project-hash-part.html

--- a/application/home/view/themes/bootstrap/system-info-project-hash-part.html
+++ b/application/home/view/themes/bootstrap/system-info-project-hash-part.html
@@ -1,8 +1,7 @@
 <div class="panel panel-default">
-    <div class="panel-heading">Git Hash</div>
+    <div class="panel-heading">Project Version</div>
     <div class="panel-body">
-        <p>Branch: {$branch_name}</p>
-        <p>Release Date: {$release_date}</p>
-        <p>Commit: {$source_code_hash}</p>
+        <p>Branch: main</p>
+        <p>Version: {$project_version}</p>
     </div>
 </div>
