--- a/application/home/view/themes/bootstrap/paste.html
+++ b/application/home/view/themes/bootstrap/paste.html
@@ -13,7 +13,7 @@
             </div>
         </div>
 
-        <p><textarea class="form-control" style="font-family:Courier New;width:100%" name="code" rows="20" cols="100"></textarea></p>
+        <p><textarea placeholder="Please input your source code." class="form-control" style="font-family:Courier New;width:100%" name="code" rows="20" cols="100"></textarea></p>
         <p><button type="submit" class="btn btn-success">Paste</button></p>
     </form>
 </div>
