--- a/application/home/view/themes/bootstrap/contests.html
+++ b/application/home/view/themes/bootstrap/contests.html
@@ -9,38 +9,41 @@ $code_arr = array(
 );
 ?>
 <div class="container">
-	<form class="form-horizontal" action="{$target}" method="get">
-		<div class="col-sm-5" style="padding-left: 0px">
-			<input class="form-control" style="border-radius: 0px" type="text" name="keyword" value="{$keyword}" placeholder="{$lang.keyword}: {$lang.title}">
-		</div>
-		<div class="col-sm-2">
-			<button class="btn btn-success"> <span class="glyphicon glyphicon-search"></span> {$lang.search}</button>
-		</div>
-	</form>
+	<div class="row">
+		<div class="panel panel-default">
+			<div class="panel-body">
+				<form class="form-horizontal" action="{$target}" method="get">
+					<div class="col-sm-5" style="padding-left: 0px">
+						<input class="form-control" style="border-radius: 0px" type="text" name="keyword" value="{$keyword}" placeholder="{$lang.keyword}: {$lang.title}">
+					</div>
+					<div class="col-sm-2">
+						<button class="btn btn-success"> <span class="glyphicon glyphicon-search"></span> {$lang.search}</button>
+					</div>
+				</form>
 
-	<table class="table table-hover">
-		<thead>
-		<tr>
-			<th width="5%">ID</th>
-			<th width="40%">{$lang.title}</th>
-			<th width="35%">{$lang.status}</th>
-			<th width="20%">{$lang.administrator}</th>
-		</tr>
-		</thead>
-		<tbody>
-		{volist name='contests' id='contest'}
-		<?php $contest->fk(); ?>
-		<tr>
-			<td>{$contest->contest_id}</td>
-			<td><a href="/contests/{$contest->contest_id}" style="text-decoration: none">
-				{if $contest->private == 1}
-				<span class="glyphicon glyphicon-lock text-danger"></span>&nbsp;
-				{/if}
-				{$contest->title}</a>
+				<table class="table table-hover">
+					<thead>
+					<tr>
+						<th width="5%">ID</th>
+						<th width="40%">{$lang.title}</th>
+						<th width="35%">{$lang.status}</th>
+						<th width="20%">{$lang.administrator}</th>
+					</tr>
+					</thead>
+					<tbody>
+					{volist name='contests' id='contest'}
+					<?php $contest->fk(); ?>
+					<tr>
+						<td>{$contest->contest_id}</td>
+						<td><a href="/contests/{$contest->contest_id}" style="text-decoration: none">
+							{if $contest->private == 1}
+							<span class="glyphicon glyphicon-lock text-danger"></span>&nbsp;
+							{/if}
+							{$contest->title}</a>
 
-				{if $contest->is_need_enroll && $contest->is_enroll}<span class="label label-success">已报名</span>{/if}
-			</td>
-			<td>
+							{if $contest->is_need_enroll && $contest->is_enroll}<span class="label label-success">已报名</span>{/if}
+						</td>
+						<td>
 				<span style="color: {$code_arr[$contest->status_code]}">{$lang[$contest->status_code]}
 					{if $contest->status_code == 'contest_code_pending'}
 					@ {$contest->start_time}
@@ -54,14 +57,17 @@ $code_arr = array(
 					@ {$contest->end_time}
 					{/if}
 				</span>
-			</td>
-			<td>
-				{$contest->manager_id}({$contest->manager->nick})
-			</td>
-		</tr>
-		{/volist}
-		</tbody>
-	</table>
-	{$contests->render()}
+						</td>
+						<td>
+							{$contest->manager_id}({$contest->manager->nick})
+						</td>
+					</tr>
+					{/volist}
+					</tbody>
+				</table>
+				{$contests->render()}
+			</div>
+		</div>
+	</div>
 </div>
 {/block}
