--- a/application/home/view/themes/bootstrap/status.html
+++ b/application/home/view/themes/bootstrap/status.html
@@ -2,102 +2,108 @@
 {block name='title_block'}{$lang['status']}{/block}
 {block name="body"}
 <div class="container">
-	<form class="form-horizontal" action="/status" method="get">
-		<div class="col-sm-2">
-			<input class="form-control" style="border-radius: 0px" type="text" name="run_id" value="{$run_id}"
-				   placeholder="{$lang.run_id}">
-		</div>
-		<div class="col-sm-2">
-			<input class="form-control" style="border-radius: 0px" type="text" name="username" value="{$username}"
-				   placeholder="{$lang.username}">
-		</div>
-		<div class="col-sm-2">
-			<input class="form-control" style="border-radius: 0px" type="text" name="problem_id" value="{$problem_id}"
-				   placeholder="{$lang.problem_id}">
-		</div>
-		<div class="col-sm-2">
-			<select class="form-control" style="border-radius: 0px" name="result">
-				<option value="" {if $result==""}selected{/if}>{$lang.all_result}</option>
-				<option value="4" {if $result=="4"}selected{/if}>{$lang.result_code_ac}</option>
-				<option value="0" {if $result=="0"}selected{/if}>{$lang.result_code_pending}</option>
-				<option value="1" {if $result=="1"}selected{/if}>{$lang.result_code_rejuding}</option>
-				<option value="2" {if $result=="2"}selected{/if}>{$lang.result_code_compiling}</option>
-				<option value="3" {if $result=="3"}selected{/if}>{$lang.result_code_running}</option>
-				<option value="5" {if $result=="5"}selected{/if}>{$lang.result_code_pe}</option>
-				<option value="6" {if $result=="6"}selected{/if}>{$lang.result_code_wa}</option>
-				<option value="7" {if $result=="7"}selected{/if}>{$lang.result_code_tle}</option>
-				<option value="8" {if $result=="8"}selected{/if}>{$lang.result_code_mle}</option>
-				<option value="9" {if $result=="9"}selected{/if}>{$lang.result_code_ole}</option>
-				<option value="10" {if $result=="10"}selected{/if}>{$lang.result_code_re}</option>
-				<option value="11" {if $result=="11"}selected{/if}>{$lang.result_code_ce}</option>
-			</select>
-		</div>
-		<div class="col-sm-2">
-			<select class="form-control" style="border-radius: 0px" name="language">
-				<option value="" {if $language==""}selected{/if}>{$lang.all_language}</option>
-                {volist name='allowed_langs' id='allowed_lang'}
-                <option value="{$allowed_lang.id}" {if $language != '' && $language == $allowed_lang.id}selected{/if}>{$allowed_lang.name}</option>
-                {/volist}
-			</select>
-		</div>
-		<div class="col-sm-2">
-			<button class="btn btn-success">{$lang.submit}</button>
-		</div>
-	</form>
-	<br>
-	<hr>
-	<table class="table table-hover">
-		<thead>
-		<tr>
-			<th width="5%">{$lang.run_id}</th>
-			<th width="10%">{$lang.username}</th>
-			<th width="5%">{$lang.problem}</th>
-			<th width="15%">{$lang.result}</th>
-			<th width="10%">{$lang.memory}</th>
-			<th width="10%">{$lang.exe_time}</th>
-			<th width="10%">{$lang.language}</th>
-			<th width="10%">{$lang.code_length}</th>
-			<th width="20%">{$lang.submit_time}</th>
-		</tr>
-		</thead>
-		<tbody>
-		{volist name='solutions' id='solution'}
-		<?php
+	<div class="row">
+		<div class="panel panel-default">
+			<div class="panel-body">
+				<form class="form-horizontal" action="/status" method="get">
+					<div class="col-sm-2">
+						<input class="form-control" style="border-radius: 0px" type="text" name="run_id" value="{$run_id}"
+							   placeholder="{$lang.run_id}">
+					</div>
+					<div class="col-sm-2">
+						<input class="form-control" style="border-radius: 0px" type="text" name="username" value="{$username}"
+							   placeholder="{$lang.username}">
+					</div>
+					<div class="col-sm-2">
+						<input class="form-control" style="border-radius: 0px" type="text" name="problem_id" value="{$problem_id}"
+							   placeholder="{$lang.problem_id}">
+					</div>
+					<div class="col-sm-2">
+						<select class="form-control" style="border-radius: 0px" name="result">
+							<option value="" {if $result==""}selected{/if}>{$lang.all_result}</option>
+							<option value="4" {if $result=="4"}selected{/if}>{$lang.result_code_ac}</option>
+							<option value="0" {if $result=="0"}selected{/if}>{$lang.result_code_pending}</option>
+							<option value="1" {if $result=="1"}selected{/if}>{$lang.result_code_rejuding}</option>
+							<option value="2" {if $result=="2"}selected{/if}>{$lang.result_code_compiling}</option>
+							<option value="3" {if $result=="3"}selected{/if}>{$lang.result_code_running}</option>
+							<option value="5" {if $result=="5"}selected{/if}>{$lang.result_code_pe}</option>
+							<option value="6" {if $result=="6"}selected{/if}>{$lang.result_code_wa}</option>
+							<option value="7" {if $result=="7"}selected{/if}>{$lang.result_code_tle}</option>
+							<option value="8" {if $result=="8"}selected{/if}>{$lang.result_code_mle}</option>
+							<option value="9" {if $result=="9"}selected{/if}>{$lang.result_code_ole}</option>
+							<option value="10" {if $result=="10"}selected{/if}>{$lang.result_code_re}</option>
+							<option value="11" {if $result=="11"}selected{/if}>{$lang.result_code_ce}</option>
+						</select>
+					</div>
+					<div class="col-sm-2">
+						<select class="form-control" style="border-radius: 0px" name="language">
+							<option value="" {if $language==""}selected{/if}>{$lang.all_language}</option>
+							{volist name='allowed_langs' id='allowed_lang'}
+							<option value="{$allowed_lang.id}" {if $language != '' && $language == $allowed_lang.id}selected{/if}>{$allowed_lang.name}</option>
+							{/volist}
+						</select>
+					</div>
+					<div class="col-sm-2">
+						<button class="btn btn-success">{$lang.submit}</button>
+					</div>
+				</form>
+				<br>
+				<hr>
+				<table class="table table-hover">
+					<thead>
+					<tr>
+						<th width="5%">{$lang.run_id}</th>
+						<th width="10%">{$lang.username}</th>
+						<th width="5%">{$lang.problem}</th>
+						<th width="15%">{$lang.result}</th>
+						<th width="10%">{$lang.memory}</th>
+						<th width="10%">{$lang.exe_time}</th>
+						<th width="10%">{$lang.language}</th>
+						<th width="10%">{$lang.code_length}</th>
+						<th width="20%">{$lang.submit_time}</th>
+					</tr>
+					</thead>
+					<tbody>
+					{volist name='solutions' id='solution'}
+					<?php
 		$solution->fk();
-		$solution->result_text = $lang[$solution->result_code];
-		?>
-		<tr>
-			<td width="10%">
-				{if ($login_user && $login_user->is_admin) || ($login_user && $solution->user_id == $login_user->user_id)}
-				<a target="_blank" href="/solutions/{$solution->solution_id}">{$solution->solution_id}</a>
-				{else}
-				{$solution->solution_id}
-				{/if}
-			</td>
-			<td width="10%"><a href="/users/{$solution->user_id}">{$solution->user_id}</a></td>
-			<td width="10%"><a href="/problems/{$solution->problem_id}">{$solution->problem_id}</a></td>
-			{if $solution->result_code == 'result_code_ce'}
-			<td width="10%"><a href="/solutions/{$solution->solution_id}" target="_blank">{$solution->result_text}</a>
-			</td>
-			{else}
-			<td width="10%" class="{$solution->result_code}">{$solution->result_text}
-			</td>
-			{/if}
-			<td width="10%">{$solution->get_memory_h()}</td>
-			<td width="10%">{$solution->time} ms</td>
-			<td width="10%">
-				{if ($login_user && $login_user->is_admin) || ($login_user && $solution->user_id == $login_user->user_id)}
-				<a target="_blank" href="/solutions/{$solution->solution_id}">{$solution->language_text}</a>
-				{else}
-				{$solution->language_text}
-				{/if}
-			</td>
-			<td width="10%">{$solution->code_length} B</td>
-			<td width="20%">{$solution->in_date}</td>
-		</tr>
-		{/volist}
-		</tbody>
-	</table>
+					$solution->result_text = $lang[$solution->result_code];
+					?>
+					<tr>
+						<td width="10%">
+							{if ($login_user && $login_user->is_admin) || ($login_user && $solution->user_id == $login_user->user_id)}
+							<a target="_blank" href="/solutions/{$solution->solution_id}">{$solution->solution_id}</a>
+							{else}
+							{$solution->solution_id}
+							{/if}
+						</td>
+						<td width="10%"><a href="/users/{$solution->user_id}">{$solution->user_id}</a></td>
+						<td width="10%"><a href="/problems/{$solution->problem_id}">{$solution->problem_id}</a></td>
+						{if $solution->result_code == 'result_code_ce'}
+						<td width="10%"><a href="/solutions/{$solution->solution_id}" target="_blank">{$solution->result_text}</a>
+						</td>
+						{else}
+						<td width="10%" class="{$solution->result_code}">{$solution->result_text}
+						</td>
+						{/if}
+						<td width="10%">{$solution->get_memory_h()}</td>
+						<td width="10%">{$solution->time} ms</td>
+						<td width="10%">
+							{if ($login_user && $login_user->is_admin) || ($login_user && $solution->user_id == $login_user->user_id)}
+							<a target="_blank" href="/solutions/{$solution->solution_id}">{$solution->language_text}</a>
+							{else}
+							{$solution->language_text}
+							{/if}
+						</td>
+						<td width="10%">{$solution->code_length} B</td>
+						<td width="20%">{$solution->in_date}</td>
+					</tr>
+					{/volist}
+					</tbody>
+				</table>
+			</div>
+		</div>
+	</div>
 </div>
 
 {include file="common@snippets/highlight"}
