refactor: change css,js cdn link

--- a/application/home/view/themes/bootstrap/layout/common.html
+++ b/application/home/view/themes/bootstrap/layout/common.html
@@ -8,9 +8,9 @@
     <title>{block name='title_full_block'}{block name='title_block'}{$site_name}{/block} - {$site_name}{/block}</title>
     <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0">
 
-    {include file="common@snippets/font-awesome"}
-    {include file="common@snippets/bootstrap"}
-    {include file="common@snippets/layer"}
+    {include file="common@snippets/font-awesome-bootcdn"}
+    {include file="common@snippets/bootstrap-bootcdn"}
+    {include file="common@snippets/layer-bootcdn"}
 
     <link rel="stylesheet" href="/static/app.css">
 </head>
