--- a/application/common/view/snippets/bootstrap-cloudflare.html
+++ b/application/common/view/snippets/bootstrap-cloudflare.html
@@ -1,5 +1,5 @@
 <link href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
-{include file="common@snippets/jquery3"}
+{include file="common@snippets/jquery3-cloudflare"}
 <script src="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
 <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
