feat: optimize Dockerfile

--- a/application/common/view/snippets/xadmin.html
+++ b/application/common/view/snippets/xadmin.html
@@ -1,6 +1,6 @@
 <link rel="stylesheet" href="/static/xadmin/css/font.css">
 <link rel="stylesheet" href="/static/xadmin/css/xadmin.css">
 <script src="/static/laydate/laydate.js"></script>
-{include file="common@snippets/jquery3"}
+{include file="common@snippets/jquery3-bootcdn"}
 <script src="/static/xadmin/lib/layui/layui.js" charset="utf-8"></script>
 <script type="text/javascript" src="/static/xadmin/js/xadmin.js"></script>
