test: 本地开发环境建设
Issue: Closes #101

--- a/application/home/view/themes/bootstrap/layout/common.html
+++ b/application/home/view/themes/bootstrap/layout/common.html
@@ -93,20 +93,12 @@
 {block name="footer"}
 <div style="text-align: center;margin-top:20px;margin-bottom: 20px;">
     <hr>
-    &copy; 2019&nbsp;<a href="/">{$site_name}</a>&nbsp;&nbsp;&nbsp;&nbsp;
+    &copy; 2012-2022 <a style="margin-left: 4px;margin-right: 20px;" href="/">{$site_name}</a>
     {include file="home@common_html/language_selector"}
     |
     <a id="email-address-a" href="mailto:{$admin_email}">{$admin_email}</a>
-    <!--	|-->
-    <!--	<a href="https://wiki.ismdeep.com/index.php?title=%E6%B1%9F%E8%A5%BF%E7%90%86%E5%B7%A5%E5%A4%A7%E5%AD%A6ACM-ICPC" target="_blank">JxustACM</a>-->
-    |
-    <a href="https://www.notion.so/JustOJ-673f15f8e3e94aebab2b43bfdb41ce6c" target="_blank">Docs</a>
     |
     <a href="/system-info" target="_blank">System Info</a>
-    |
-    <a href="https://t.me/justoj_group">Telegram Group</a>
-    |
-    <a href="https://t.me/justoj_official">Telegram Channel</a>
 </div>
 {/block}
 
